# rust-headless-chrome

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  checkbox_counter.html
.github/workflows/: ci.yml
devtools-proto/: Cargo.toml
devtools-proto/src/: browser.rs  debugger.rs  dom.rs  input.rs  network.rs  page.rs  profiler.rs  runtime.rs  target.rs
examples/: call_js_function_with_args.rs  electron_like.rs  local_storage.rs  print_to_pdf.rs  query_wikipedia.rs  real_world.rs  settings_and_event.rs  take_screenshot.rs
json/: browser_protocol.json
src/: browser.rs  chrome.rs  connection.rs  element.rs  errors.rs  evaluation.rs  helpers.rs  infer_associated.rs  keys.rs  lib.rs  logging.rs  main.rs  page_session.rs  point.rs  process.rs  protocol.rs  tab.rs  transport.rs  types.rs  util.rs  waiting_call_registry.rs  web_socket_connection.rs
src/browser/: context.rs  fetcher.rs  mod.rs  process.rs  revision.rs  waiting_helpers.rs
src/browser/tab/: dialog.rs  element.rs  keys.rs  mod.rs  point.rs
src/browser/tab/element/: box_model.rs  mod.rs
src/browser/transport/: mod.rs  waiting_call_registry.rs  web_socket_connection.rs
src/cdtp/: browser.rs  dom.rs  input.rs  mod.rs  page.rs  runtime.rs  target.rs
src/protocol/: browser.rs  css.rs  debugger.rs  dom.rs  fetch.rs  input.rs  logs.rs  mod.rs  network.rs  page.rs  profiler.rs  runtime.rs  target.rs  types.rs
src/testing_utils/: logging.rs  mod.rs  server.rs
tests/: connect_to_url.rs  coverage.rs  events_listeners.rs  expose_function.rs  extension.rs  file_chooser.rs  form.html  integration.rs  local_storage.rs  logging.rs  logs.rs  server.rs  shadow-dom.html  simple.html  simple.rs  transparent.html
tests/coverage_fixtures/: basic_page_with_js_scripts.html  basic_page_with_loading_failed_element.html  coverage_fixture1.js  coverage_fixture2.js
tests/events_fixtures/: events_page.html
tests/extension_sample/: background.js  manifest.json
tests/file_chooser_fixtures/: chooser.html
tests/logs_fixtures/: basic_page_with_console_messages.html
tests/pdfassets/: index.html  style.css
tests/temp/: .gitkeep
