[package]
name = "headless_chrome"
version = "1.0.12"
authors = ["Alistair Roche <alistair@sunburnt.country>"]
edition = "2021"
rust-version = "1.78"
description = "Control Chrome programatically"
license = "MIT"
homepage = "https://github.com/rust-headless-chrome/rust-headless-chrome"
repository = "https://github.com/rust-headless-chrome/rust-headless-chrome"
readme = "README.md"

[dependencies]
anyhow = "1"
base64 = "0.22.1"
derive_builder = "0.20.0"
directories = { version = "5.0", optional = true }
log = "0.4"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
ureq = { version = "2.9", optional = true, features = ["proxy-from-env"] }
walkdir = { version = "2", optional = true }
tungstenite = "0.23.0"
url = "2.5"
which = "6.0.1"
zip = { version = "2.1.0", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
env_logger = "0.11.3"
filepath = "0.1.2"
jpeg-decoder = { version = "0.3", default-features = false }
png = { version = "0.17" }
tiny_http = "0.12"

[build-dependencies]
auto_generate_cdp = "0.4.4"

[lib]
name = "headless_chrome"
path = "src/lib.rs"

[features]
default = ["offline"]
fetch = ["ureq", "directories", "zip", "walkdir"]
nightly = []
offline = ["auto_generate_cdp/offline"]
rustls = ["tungstenite/rustls", "tungstenite/rustls-tls-native-roots"]
native-tls = ["tungstenite/native-tls"]
