[package]
name = "headless_chrome"
version = "1.0.22"
authors = ["Alistair Roche <alistair@sunburnt.country>"]
edition = "2024"
rust-version = "1.85"
description = "Control Chrome programmatically"
license = "MIT"
homepage = "https://github.com/rust-headless-chrome/rust-headless-chrome"
repository = "https://github.com/rust-headless-chrome/rust-headless-chrome"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
derive_builder = "0.20.2"
directories = { version = "6.0.0", optional = true }
log = "0.4.32"
rand = "0.10.1"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
ureq = { version = "3.3.0", optional = true }
walkdir = { version = "2.5.0", optional = true }
tungstenite = "0.29.0"
url = "2.5.8"
which = "8.0.3"
zip = { version = "8.6.0", optional = true }
rustls = { version = "0.23.40", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
webpki-roots = { version = "1.0.7", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[dev-dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
env_logger = "0.11.10"
filepath = "0.2.0"
jpeg-decoder = { version = "0.3.2", default-features = false }
png = { version = "0.18.1" }
tiny_http = "0.12.0"

[build-dependencies]
auto_generate_cdp = "0.4.6"

[lib]
name = "headless_chrome"
path = "src/lib.rs"

[features]
default = ["offline"]
fetch = ["ureq", "directories", "zip", "walkdir"]
nightly = []
offline = ["auto_generate_cdp/offline"]
rustls-tls-native-roots = ["tungstenite/rustls", "tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tungstenite/rustls", "tungstenite/rustls-tls-webpki-roots", "rustls", "rustls-pemfile", "webpki-roots",  "rustls/ring"]
native-tls = ["tungstenite/native-tls"]
